--- a/portafolio.html
+++ b/portafolio.html
@@ -15,7 +15,7 @@
 		<div class="full-width NavBarP-Logo"><img src="https://images.cooltext.com/5536656.png" width="200" height="60" alt="The Spartans.Games"></div>
 		<nav class="full-width NavBarP-Nav">
 			<ul class="full-width list-unstyled">
-				<li><a href="principal.html">Inicio</a></li>
+				<li><a href="index.html">Inicio</a></li>
               <li><a href="juegos.html">juegos</a></li>
               <li><a href="mision.html">mision</a></li>
               <li><a href="visión.html">vision</a></li>
